fix: color contrast

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,7 +3,7 @@
 
 @theme {
   --font-mono: "JetBrains Mono Variable", monospace;
-  --color-gray-text: hsl(224, 6%, 46%);
+  --color-gray-text: hsl(224, 5%, 35%);
   --grid-template-columns-custom: repeat(auto-fill, minmax(4rem, 7rem));
   --width-half: 50%;
 }
